# netstat-rs

./: Cargo.toml  README.md  build.rs
src/: lib.rs
src/integrations/: shared_api.rs
src/integrations/linux/: api.rs  netlink_iterator.rs
src/integrations/linux/ffi/: mod.rs
src/integrations/osx/: api.rs  mod.rs  netstat.rs  sysctlw.rs
src/integrations/osx/ext/: get_netstat.c  mod.rs  tcp_state_ext.rs
src/integrations/windows/: api.rs  socket_table.rs
src/integrations/windows/ext/: mod.rs
src/types/: mod.rs  socket_info.rs  tcp_state.rs
