[package]
name = "netstat-esr"
version = "0.8.0"
authors = ["ivxvm <ivxvm@protonmail.com>", "Harun Esur <harun.esur@sceptive.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/esurharun/netstat-rs"
documentation = "https://docs.rs/netstat"
categories = ["network-programming", "os"]
keywords = ["network", "socket"]
description = """
Cross-platform library to retrieve network sockets information.
"""

[build-dependencies]
cc = "1"

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dev-dependencies]
easybench = "0.1"

[[bench]]
name = "get_sockets_info_benchmark"
harness = false
